chore(release): finalize 5.0.1 — stamp changelog, sweep version drift, JNA→FFM docs
- CHANGELOG [Unreleased] → [5.0.1] - 2026-07-03 + compare link; reconcile the
  WASM "requires next npm major" note to an intentional patch ship
- fix ui/package.json version drift (5.0.0 → 5.0.1) and sync its lockfile
- sweep stale JNA references to FFM across docs (binding verified FFM /
  java.lang.foreign, zero com.sun.jna imports)
- correct c-abi.md v1 → v2 boundary contract, comparison.md perf numbers
  (44x→104x, 22x→31x vs the canonical chart), JVM install snippets, JDK 22+
- align the diverged useIsMobile SSR guard between the demo app and embeddable
- clippy collapsible_if fixes + explicit profile_macro [[bin]] in the bench tool